--- a/css/content-style.css
+++ b/css/content-style.css
@@ -1,6 +1,14 @@
-.background
-{
+.background {
 	background:url(../img/bg-texture.png);
 	width:100%;
 	height:100%;
+}
+
+.accent {
+	background:#d33333;
+	color:white;
+}
+
+.accent-text{
+	color:#d33333;
 }
