--- a/css/content-style.css
+++ b/css/content-style.css
@@ -7,6 +7,7 @@ body
 	background:url(../img/bg-texture.png);
 	width:100%;
 	height:100%;
+	z-index: -1;
 }
 
 .accent {
@@ -16,4 +17,9 @@ body
 
 .accent-text{
 	color:#d33333;
+}
+
+.primory-text
+{
+	color:#443f3f;
 }
