--- a/css/main.css
+++ b/css/main.css
@@ -17,23 +17,27 @@ html{
 	width:100%;
 }
 .left-bar ul span{
-	padding:15px;
-	display:block;
+	padding:13px;
+	white-space: nowrap;
 	height:65px;
-	font-size: 15px;
+	font-size: 13px;
 	font-weight: 700;
 	font-family: 'Open Sans', sans-serif;
+	border-bottom: 1px solid rgb(218, 218, 218);
+	border-top: 1px solid rgb(218, 218, 218);
+	display: block;
+	width:100%;
 }
-.left-bar ul span img{
+.left-bar ul img{
 	height: 35px;
 	margin-right: 13px;
+	float:left;
 }
 .left-bar ul{
 	color: rgb(68, 63, 63);
-	border-width: 1px;
-	border-color: rgb(218, 218, 218);
-	border-style: solid;
 	padding-left: 0;
+	margin: 0;
+	cursor:pointer;
 }
 .left-bar ul>li{
 	font-size: 12px;
@@ -44,7 +48,12 @@ html{
 	background-color: rgb(243, 243, 243);
 	list-style: none;
 	padding: 7px 0 7px 14px;
+	cursor:pointer;
+
 }
 .left-bar ul>li:hover{
 	background-color: rgb(229, 229, 229);
+}
+#aluminium span {
+	color: #d33333;
 }
