--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,19 @@
+Skip to content
+This repository  
+Search
+Pull requests
+Issues
+Gist
+ @flaminisx
+ Unwatch 2
+  Star 0
+ Fork 0 flaminisx/megagrad
+ Code  Issues 0  Pull requests 0  Wiki  Pulse  Graphs  Settings
+Branch: master Find file Copy pathmegagrad/css/main.css
+375068a  34 minutes ago
+@flaminisx flaminisx object
+1 contributor
+RawBlameHistory     59 lines (58 sloc)  985 Bytes
 html{
 	margin: 0;
 }
