--- a/css/content-style.css
+++ b/css/content-style.css
@@ -16,7 +16,7 @@ body
 }
 
 .accent {
-	background:#d33333;
+	background-color: rgb(211, 51, 51);
 	color:white;
 }
 
@@ -57,4 +57,10 @@ body
 .btn-block
 {
 	 box-shadow:  0 5px 0 0px #ab2525;
+}
+
+.addres
+{
+	vertical-align:bottom; /* вот она */
+	display:inline-block;
 }
