--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,6 @@ html,body {height:100%;}
 
 .background {
 	background:url(../img/bg-texture.png);
-	width:100%;
-	z-index: -1;
 }
 
 .accent {
@@ -85,7 +83,7 @@ html,body {height:100%;}
 }
 nav{
 	height: 84px;
-	padding: 35px;
+	padding-top: 35px;
 }
 nav .wrapper{
 	height: 100%;
@@ -122,13 +120,20 @@ nav span.btn{
 .metr{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
-	height: 84px;
+	height: 74px;
 	position:relative;
 	bottom:0;
 }
 .metr .wrapper{
 	margin:0 auto;
 	margin-top:20px;
+	padding: 15px;
 }
 
 .bold{font-weight: 700}
+.main-row{
+	margin: 0;
+}
+footer{
+	margin-top: 15px;
+}
