--- a/css/main.css
+++ b/css/main.css
@@ -137,3 +137,22 @@ nav span.btn{
 footer{
 	margin-top: 15px;
 }
+.JivoSite {
+  font-size: 14px;
+  font-family: "OpenSans";
+  color: rgba(255, 255, 255, 0.38);
+  line-height: 1.286;
+}
+.Онлайн_консультант {
+  font-size: 16px;
+  font-family: "OpenSans";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.125;
+}
+.Прямоугольник_2 {
+  background-color: rgb(211, 51, 51);
+  position: absolute;
+  width: 302px;
+  height: 48px;
+}
