--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,12 @@ html,body {height:100%;}
 .padding{
 	padding-left:50px;
 }
+.left{
+	float:left;
+}
+.right{
+	float:right;
+}
 
 .background {
 	background:url(../img/bg-texture.png);
@@ -84,6 +90,7 @@ html,body {height:100%;}
 nav{
 	height: 84px;
 	padding-top: 35px;
+	padding-left: 15px;
 }
 nav .wrapper{
 	height: 100%;
@@ -129,30 +136,143 @@ nav span.btn{
 	margin-top:20px;
 	padding: 15px;
 }
-
+main#main-content{
+	padding-right: 15px;
+}
 .bold{font-weight: 700}
 .main-row{
 	margin: 0;
 }
+.row{
+	margin:0;
+}
+.fullwidth{
+	width:100%;
+}
 footer{
 	margin-top: 15px;
+	margin-bottom: 15px;
+	margin-right: 30px;
+	width:auto !important;
 }
 .JivoSite {
   font-size: 14px;
-  font-family: "OpenSans";
+  font-family: "Open Sans", sans-serif;
   color: rgba(255, 255, 255, 0.38);
   line-height: 1.286;
 }
-.Онлайн_консультант {
-  font-size: 16px;
-  font-family: "OpenSans";
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  line-height: 1.125;
+.online-consult {
+	font-size: 16px;
+	font-family: "Open Sans", sans-serif;
+	color: rgb(255, 255, 255);
+	line-height: 1.125;
+	height: 48px;
+	padding:16px;
 }
-.Прямоугольник_2 {
-  background-color: rgb(211, 51, 51);
-  position: absolute;
-  width: 302px;
-  height: 48px;
+.modal-container{
+	background:rgba(0, 0, 0, 0.58);
+	position: fixed;
+	top:0;
+	left:0;
+	height:100%;
+	width: 100%;
+	z-index:10;
+	transition: 2s;
+	opacity:0;
 }
+.modal-container.show{
+	opacity: 1;
+}
+#modal{
+	width: 50%;
+	margin: 0 auto;
+	margin-top: 40px;
+	color: white;
+	background-image: url(../img/modal-bg.png);
+	padding:7px 0 7px 0;
+}
+#modal hr{
+	border-color: rgb(211, 51, 51);
+}
+#modal h1{
+	width:100%;
+	text-align:center;
+	font-size: 24px;
+	margin-top: 10px;
+	margin-bottom:30px;
+}
+#modal label{
+	font-size: 17px;
+	font-weight: 400;
+}
+#modal .row.radios .wrapper{
+	margin:0 auto;
+	float:left;
+}
+#modal .inputs{
+	padding-left: 13px;
+	padding-right: 13px;
+}
+#modal .inputs div{
+	padding:2;
+}
+#modal input, #modal button, #modal textarea{
+	font-size: 17px;
+	width:100%;
+	padding: 15px;
+	border-radius: 3px;
+	border:0;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+
+#modal input[type=radio] {
+	vertical-align: top;
+	width: 17px;
+	height: 17px;
+	margin: 0 3px 0 0;
+	float:left;
+}
+#modal input[type=radio] + label {
+	cursor: pointer;
+}
+#modal input[type=radio]:not(checked) {
+	position: absolute;
+	opacity: 0;
+}
+#modal input[type=radio]:not(checked) + label {
+	position: relative;
+	padding: 0 0 0 35px;
+}
+#modal input[type=radio]:not(checked) + label:before {
+	content: '';
+	position: absolute;
+	top: -2px;
+	left: 0;
+	width: 22px;
+	height: 22px;
+	border: 1px solid #fff;
+	border-radius: 50%;
+	background: transparent;
+}
+#modal input[type=radio]:not(checked) + label:after {
+	content: '';
+	position: absolute;
+	top: 1px;
+	left: 3px;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	background: white;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+	opacity: 0;
+	transition: all .2s;
+}
+#modal input[type=radio]:checked + label:after {
+	opacity: 1;
+}
+#modal input[type=radio]:hover + label {
+	text-decoration: underline;
+}
+
