--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,17 @@ html,body {height:100%;}
 .no-padding>*{
 	width:100%;
 }
-.left-bar ul span{
+.left-bar ul.nav-left{
+	padding-left: 0;
+	margin: 0;
+	list-style: none;
+}
+.left-bar ul.nav-left>li>ul{
+	padding-left: 0;
+	display:none;
+	transition: color 0.3s;
+}
+.left-bar ul.nav-left span{
 	padding:13px;
 	white-space: nowrap;
 	height:65px;
@@ -58,18 +68,18 @@ html,body {height:100%;}
 	display: block;
 	width:100%;
 }
-.left-bar ul img{
+.left-bar ul.nav-left img{
 	height: 35px;
 	margin-right: 13px;
 	float:left;
 }
-.left-bar ul{
+.left-bar li{
 	color: rgb(68, 63, 63);
 	padding-left: 0;
 	margin: 0;
 	cursor:pointer;
 }
-.left-bar ul>li{
+.left-bar .nav-left ul>li{
 	font-size: 12px;
 	font-weight: 400;
 	font-family: 'Open Sans', sans-serif;
@@ -81,11 +91,8 @@ html,body {height:100%;}
 	cursor:pointer;
 
 }
-.left-bar ul>li:hover{
+.left-bar .nav-left ul>li:hover{
 	background-color: rgb(229, 229, 229);
-}
-#aluminium span {
-	color: #d33333;
 }
 nav.navbar{
 	height: 84px;
